07/31/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_ARCZonalShift_ZonalAutoshiftConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_ARCZonalShift_ZonalAutoshiftConfiguration.json
@@ -18,7 +18,7 @@
           "type": "string",
           "maxLength": 1024,
           "minLength": 8,
-          "pattern": "^arn:.*$"
+          "pattern": "^.*$"
         }
       },
       "required": [
@@ -29,9 +29,9 @@
     },
     "ControlConditionType": {
       "type": "string",
-      "enum": [
-        "CLOUDWATCH"
-      ]
+      "minLength": 8,
+      "maxLength": 10,
+      "pattern": "^[a-zA-Z]*$"
     },
     "PracticeRunConfiguration": {
       "type": "object",
