--- a/internal/service/cloudformation/schemas/AWS_CleanRooms_ConfiguredTable.json
+++ b/internal/service/cloudformation/schemas/AWS_CleanRooms_ConfiguredTable.json
@@ -165,6 +165,9 @@
             "$ref": "#/definitions/AggregationConstraint"
           },
           "minItems": 1
+        },
+        "AdditionalAnalyses": {
+          "$ref": "#/definitions/AdditionalAnalyses"
         }
       },
       "required": [
@@ -201,6 +204,9 @@
           "items": {
             "$ref": "#/definitions/AnalysisRuleColumnName"
           }
+        },
+        "AdditionalAnalyses": {
+          "$ref": "#/definitions/AdditionalAnalyses"
         }
       },
       "required": [
@@ -236,6 +242,22 @@
       "items": {
         "$ref": "#/definitions/AllowedAnalysisProvider"
       }
+    },
+    "DisallowedOutputColumns": {
+      "type": "array",
+      "insertionOrder": false,
+      "minItems": 0,
+      "items": {
+        "$ref": "#/definitions/AnalysisRuleColumnName"
+      }
+    },
+    "AdditionalAnalyses": {
+      "type": "string",
+      "enum": [
+        "ALLOWED",
+        "REQUIRED",
+        "NOT_ALLOWED"
+      ]
     },
     "DifferentialPrivacyColumn": {
       "type": "object",
@@ -277,6 +299,12 @@
         },
         "DifferentialPrivacy": {
           "$ref": "#/definitions/DifferentialPrivacy"
+        },
+        "DisallowedOutputColumns": {
+          "$ref": "#/definitions/DisallowedOutputColumns"
+        },
+        "AdditionalAnalyses": {
+          "$ref": "#/definitions/AdditionalAnalyses"
         }
       },
       "required": [
@@ -499,7 +527,12 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": true,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "cleanrooms:ListTagsForResource",
+      "cleanrooms:UntagResource",
+      "cleanrooms:TagResource"
+    ]
   },
   "handlers": {
     "create": {
