--- a/internal/service/cloudformation/schemas/AWS_InspectorV2_CisScanConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_InspectorV2_CisScanConfiguration.json
@@ -185,6 +185,12 @@
       "$ref": "#/definitions/CisTagMap"
     }
   },
+  "required": [
+    "ScanName",
+    "SecurityLevel",
+    "Schedule",
+    "Targets"
+  ],
   "additionalProperties": false,
   "readOnlyProperties": [
     "/properties/Arn"
