--- a/internal/service/cloudformation/schemas/AWS_Panorama_ApplicationInstance.json
+++ b/internal/service/cloudformation/schemas/AWS_Panorama_ApplicationInstance.json
@@ -11,7 +11,7 @@
     "/properties/CreatedTime",
     "/properties/LastUpdatedTime"
   ],
-  "description": "Schema for ApplicationInstance CloudFormation Resource",
+  "description": "Creates an application instance and deploys it to a device.",
   "createOnlyProperties": [
     "/properties/Name",
     "/properties/Description",
@@ -127,10 +127,12 @@
       ]
     },
     "ManifestOverridesPayload": {
+      "description": "Parameter overrides for an application instance. This is a JSON document that has a single key (``PayloadData``) where the value is an escaped string representation of the overrides document.",
       "additionalProperties": false,
       "type": "object",
       "properties": {
         "PayloadData": {
+          "description": "The overrides document.",
           "$ref": "#/definitions/ManifestOverridesPayloadData"
         }
       }
@@ -191,10 +193,12 @@
       }
     },
     "ManifestPayload": {
+      "description": "A application verion's manifest file. This is a JSON document that has a single key (``PayloadData``) where the value is an escaped string representation of the application manifest (``graph.json``). This file is located in the ``graphs`` folder in your application source.",
       "additionalProperties": false,
       "type": "object",
       "properties": {
         "PayloadData": {
+          "description": "The application manifest.",
           "$ref": "#/definitions/ManifestPayloadData"
         }
       }
@@ -216,20 +220,21 @@
       "maxLength": 255
     },
     "Tag": {
+      "description": "",
       "additionalProperties": false,
       "type": "object",
       "properties": {
         "Value": {
           "minLength": 0,
           "pattern": "^.+$",
-          "description": "A string containing the value for the tag",
+          "description": "",
           "type": "string",
           "maxLength": 256
         },
         "Key": {
           "minLength": 1,
           "pattern": "^.+$",
-          "description": "A string used to identify this tag",
+          "description": "",
           "type": "string",
           "maxLength": 128
         }
@@ -248,51 +253,67 @@
   },
   "properties": {
     "DefaultRuntimeContextDeviceName": {
+      "description": "",
       "$ref": "#/definitions/DeviceName"
     },
     "Status": {
+      "description": "",
       "$ref": "#/definitions/ApplicationInstanceStatus"
     },
     "DefaultRuntimeContextDevice": {
+      "description": "The device's ID.",
       "$ref": "#/definitions/DefaultRuntimeContextDevice"
     },
     "Description": {
+      "description": "A description for the application instance.",
       "$ref": "#/definitions/Description"
     },
     "ApplicationInstanceIdToReplace": {
+      "description": "The ID of an application instance to replace with the new instance.",
       "$ref": "#/definitions/ApplicationInstanceId"
     },
     "CreatedTime": {
+      "description": "",
       "$ref": "#/definitions/Timestamp"
     },
     "HealthStatus": {
+      "description": "",
       "$ref": "#/definitions/ApplicationInstanceHealthStatus"
     },
     "ManifestOverridesPayload": {
+      "description": "Setting overrides for the application manifest.",
       "$ref": "#/definitions/ManifestOverridesPayload"
     },
     "LastUpdatedTime": {
+      "description": "",
       "$ref": "#/definitions/Timestamp"
     },
     "RuntimeRoleArn": {
+      "description": "The ARN of a runtime role for the application instance.",
       "$ref": "#/definitions/RuntimeRoleArn"
     },
     "Name": {
+      "description": "A name for the application instance.",
       "$ref": "#/definitions/Name"
     },
     "ApplicationInstanceId": {
+      "description": "",
       "$ref": "#/definitions/ApplicationInstanceId"
     },
     "StatusDescription": {
+      "description": "",
       "$ref": "#/definitions/ApplicationInstanceStatusDescription"
     },
     "ManifestPayload": {
+      "description": "The application's manifest document.",
       "$ref": "#/definitions/ManifestPayload"
     },
     "Arn": {
+      "description": "",
       "$ref": "#/definitions/ApplicationInstanceArn"
     },
     "Tags": {
+      "description": "Tags for the application instance.",
       "$ref": "#/definitions/TagList"
     }
   }
