08/07/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_DMS_MigrationProject.json
+++ b/internal/service/cloudformation/schemas/AWS_DMS_MigrationProject.json
@@ -3,7 +3,11 @@
   "description": "Resource schema for AWS::DMS::MigrationProject",
   "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-csf.git",
   "tagging": {
-    "taggable": true
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags"
   },
   "definitions": {
     "Tag": {
