--- a/internal/service/cloudformation/schemas/AWS_IoTFleetWise_DecoderManifest.json
+++ b/internal/service/cloudformation/schemas/AWS_IoTFleetWise_DecoderManifest.json
@@ -486,6 +486,11 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": true,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "iotfleetwise:UntagResource",
+      "iotfleetwise:TagResource",
+      "iotfleetwise:ListTagsForResource"
+    ]
   }
 }
