08/14/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_Cognito_LogDeliveryConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_Cognito_LogDeliveryConfiguration.json
@@ -12,6 +12,24 @@
       },
       "additionalProperties": false
     },
+    "S3Configuration": {
+      "type": "object",
+      "properties": {
+        "BucketArn": {
+          "type": "string"
+        }
+      },
+      "additionalProperties": false
+    },
+    "FirehoseConfiguration": {
+      "type": "object",
+      "properties": {
+        "StreamArn": {
+          "type": "string"
+        }
+      },
+      "additionalProperties": false
+    },
     "LogConfiguration": {
       "type": "object",
       "properties": {
@@ -23,6 +41,12 @@
         },
         "CloudWatchLogsConfiguration": {
           "$ref": "#/definitions/CloudWatchLogsConfiguration"
+        },
+        "S3Configuration": {
+          "$ref": "#/definitions/S3Configuration"
+        },
+        "FirehoseConfiguration": {
+          "$ref": "#/definitions/FirehoseConfiguration"
         }
       },
       "additionalProperties": false
@@ -76,7 +100,14 @@
         "logs:ListLogDeliveries",
         "logs:PutResourcePolicy",
         "logs:DescribeResourcePolicies",
-        "logs:DescribeLogGroups"
+        "logs:DescribeLogGroups",
+        "s3:GetBucketPolicy",
+        "s3:PutBucketPolicy",
+        "s3:ListBucket",
+        "s3:PutObject",
+        "s3:GetBucketAcl",
+        "firehose:TagDeliveryStream",
+        "iam:CreateServiceLinkedRole"
       ],
       "timeoutInMinutes": 2
     },
@@ -96,7 +127,14 @@
         "logs:ListLogDeliveries",
         "logs:PutResourcePolicy",
         "logs:DescribeResourcePolicies",
-        "logs:DescribeLogGroups"
+        "logs:DescribeLogGroups",
+        "s3:GetBucketPolicy",
+        "s3:PutBucketPolicy",
+        "s3:ListBucket",
+        "s3:PutObject",
+        "s3:GetBucketAcl",
+        "firehose:TagDeliveryStream",
+        "iam:CreateServiceLinkedRole"
       ],
       "timeoutInMinutes": 2
     },
@@ -111,7 +149,14 @@
         "logs:ListLogDeliveries",
         "logs:PutResourcePolicy",
         "logs:DescribeResourcePolicies",
-        "logs:DescribeLogGroups"
+        "logs:DescribeLogGroups",
+        "s3:GetBucketPolicy",
+        "s3:PutBucketPolicy",
+        "s3:ListBucket",
+        "s3:PutObject",
+        "s3:GetBucketAcl",
+        "firehose:TagDeliveryStream",
+        "iam:CreateServiceLinkedRole"
       ],
       "timeoutInMinutes": 2
     }
