--- a/internal/service/cloudformation/schemas/AWS_EC2_LaunchTemplate.json
+++ b/internal/service/cloudformation/schemas/AWS_EC2_LaunchTemplate.json
@@ -999,7 +999,7 @@
       }
     },
     "Tag": {
-      "description": "Specifies a tag. For more information, see [Add tags to a resource](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/Using_Tags.html#cloudformation-add-tag-specifications).",
+      "description": "Specifies a tag. For more information, see [Resource tags](https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-resource-tags.html).",
       "additionalProperties": false,
       "type": "object",
       "properties": {
@@ -1126,7 +1126,7 @@
     },
     "TagSpecifications": {
       "uniqueItems": false,
-      "description": "The tags to apply to the launch template on creation. To tag the launch template, the resource type must be ``launch-template``.\n To specify the tags for the resources that are created when an instance is launched, you must use [TagSpecifications](https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-launchtemplate.html#cfn-ec2-launchtemplate-tagspecifications).",
+      "description": "The tags to apply to the launch template on creation. To tag the launch template, the resource type must be ``launch-template``.\n To specify the tags for the resources that are created when an instance is launched, you must use [TagSpecifications](https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-launchtemplate-launchtemplatedata.html#cfn-ec2-launchtemplate-launchtemplatedata-tagspecifications).",
       "type": "array",
       "items": {
         "$ref": "#/definitions/LaunchTemplateTagSpecification"
