--- a/internal/service/cloudformation/schemas/AWS_IVS_EncoderConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IVS_EncoderConfiguration.json
@@ -95,7 +95,12 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": false,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "ivs:TagResource",
+      "ivs:UntagResource",
+      "ivs:ListTagsForResource"
+    ]
   },
   "readOnlyProperties": [
     "/properties/Arn"
