--- a/internal/service/cloudformation/schemas/AWS_IVS_RecordingConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IVS_RecordingConfiguration.json
@@ -192,7 +192,12 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": false,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "ivs:TagResource",
+      "ivs:UntagResource",
+      "ivs:ListTagsForResource"
+    ]
   },
   "required": [
     "DestinationConfiguration"
