08/28/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_AppIntegrations_Application.json
+++ b/internal/service/cloudformation/schemas/AWS_AppIntegrations_Application.json
@@ -135,6 +135,7 @@
   "additionalProperties": false,
   "required": [
     "Name",
+    "Namespace",
     "Description",
     "ApplicationSourceConfig"
   ],
