--- a/.github/workflows/projects.yml
+++ b/.github/workflows/projects.yml
@@ -1,4 +1,4 @@
-name: GitHub Projects Automations
+name: Provider Team Working Board
 permissions: {}
 
 on:
@@ -13,24 +13,12 @@ on:
       - labeled
       - opened
 
-env:
-  ISSUE_URL: ${{ github.event.issue.html_url || github.event.pull_request.html_url }}
-
 jobs:
   team_board:
-    name: Provider Team Project
+    name: Manage Board
     runs-on: ubuntu-latest
-
     env:
-      PROJECT_ID: PVT_kwDOAAuecM4AF-7h
-      PROJECT_NUMBER: 196
-      STATUS_FIELD_ID: PVTSSF_lADOAAuecM4AF-7hzgDcsQA
-      STATUS_IN_PROGRESS: ${{ vars.team_project_status_in_progress }}
-      VIEW_FIELD_ID: PVTSSF_lADOAAuecM4AF-7hzgMRB34
-      VIEW_ENGINEERING_INITIATIVE: ${{ vars.team_project_view_engineering_initiative }}
-      VIEW_MAINTAINER_PR: ${{ vars.team_project_status_maintainer_pr }}
-      VIEW_WORKING_BOARD: ${{ vars.team_project_view_working_board }}
-
+      ISSUE_URL: ${{ github.event.issue.html_url || github.event.pull_request.html_url }}
     steps:
       - name: Generate GitHub App Token
         id: token
@@ -39,88 +27,53 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_PEM }}
 
-      - name: Check if Author is Maintainer
-        id: author
-        if: github.event.action == 'opened'
-        env:
-          AUTHOR_LOGIN: ${{ github.event.pull_request.user.login }}
-          MAINTAINERS: ${{ secrets.MAINTAINERS }}
-        run: |
-          echo "is_maintainer=$(echo $MAINTAINERS | base64 --decode | jq --arg u $AUTHOR_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
+      - name: Checkout
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        with:
+          sparse-checkout: .github/actions/
 
-      - name: Maintainer Pull Requests
+      - name: Run Community Check
+        id: community_check
+        if: contains(fromJSON('["opened", "assigned"]'), github.event.action)
+        uses: ./.github/actions/community_check
+        with:
+          user_login: ${{ github.event.action == 'assigned' && github.event.assignee.login || github.event.pull_request.user.login }}
+          maintainers: ${{ secrets.MAINTAINERS }}
+
+      - name: Handle Maintainer Pull Requests
         if: |
-          steps.author.conclusion != 'skipped'
-          && fromJSON(steps.author.outputs.is_maintainer)
-        env:
-          GH_TOKEN: ${{ steps.token.outputs.token }}
-        run: |
-          PROJECT_ITEM_ID=$(gh project item-add $PROJECT_NUMBER --owner "hashicorp" --url "$ISSUE_URL" --format json --jq '.id')
+          github.event.action == 'opened'
+          && steps.community_check.outputs.maintainer == 'true'
+        uses: ./.github/actions/team_working_board
+        with:
+          github_token: ${{ steps.token.outputs.token }}
+          item_url: ${{ env.ISSUE_URL }}
+          status: "Maintainer PR"
+          view: "working-board"
 
-          gh project item-edit \
-            --id "$PROJECT_ITEM_ID" \
-            --project-id "$PROJECT_ID" \
-            --field-id "$STATUS_FIELD_ID" \
-            --single-select-option-id "$VIEW_MAINTAINER_PR"
-
-          gh project item-edit \
-            --id "$PROJECT_ITEM_ID" \
-            --project-id "$PROJECT_ID" \
-            --field-id "$VIEW_FIELD_ID" \
-            --single-select-option-id "$VIEW_WORKING_BOARD"
-
-      - name: Check if Assignee is Maintainer
-        id: assignee
-        if: github.event.action == 'assigned'
-        env:
-          ASSIGNEE_LOGIN: ${{ github.event.assignee.login }}
-          MAINTAINERS: ${{ secrets.MAINTAINERS }}
-        run: |
-          echo "is_maintainer=$(echo $MAINTAINERS | base64 --decode | jq --arg u $ASSIGNEE_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
-
-      - name: Maintainer Assignments
+      - name: Handle Maintainer Assignments
         if: |
-          steps.assignee.conclusion != 'skipped'
-          && fromJSON(steps.assignee.outputs.is_maintainer)
-        env:
-          GH_TOKEN: ${{ steps.token.outputs.token }}
-        run: |
-          PROJECT_ITEM_ID=$(gh project item-add $PROJECT_NUMBER --owner "hashicorp" --url "$ISSUE_URL" --format json --jq '.id')
+          github.event.action == 'assigned'
+          && steps.community_check.outputs.maintainer == 'true'
+        uses: ./.github/actions/team_working_board
+        with:
+          github_token: ${{ steps.token.outputs.token }}
+          item_url: ${{ env.ISSUE_URL }}
+          status: "In Progress"
+          view: "working-board"
 
-          gh project item-edit \
-            --id "$PROJECT_ITEM_ID" \
-            --project-id "$PROJECT_ID" \
-            --field-id "$STATUS_FIELD_ID" \
-            --single-select-option-id "$STATUS_IN_PROGRESS"
-
-          gh project item-edit \
-            --id "$PROJECT_ITEM_ID" \
-            --project-id "$PROJECT_ID" \
-            --field-id "$VIEW_FIELD_ID" \
-            --single-select-option-id "$VIEW_WORKING_BOARD"
-
-      - name: Prioritized to Working Board
+      - name: Set View for Items Labeled prioritized
         if: github.event.label.name == 'prioritized'
-        env:
-          GH_TOKEN: ${{ steps.token.outputs.token }}
-        run: |
-          PROJECT_ITEM_ID=$(gh project item-add $PROJECT_NUMBER --owner "hashicorp" --url "$ISSUE_URL" --format json --jq '.id')
+        uses: ./.github/actions/team_working_board
+        with:
+          github_token: ${{ steps.token.outputs.token }}
+          item_url: ${{ env.ISSUE_URL }}
+          view: "working-board"
 
-          gh project item-edit \
-            --id "$PROJECT_ITEM_ID" \
-            --project-id "$PROJECT_ID" \
-            --field-id "$VIEW_FIELD_ID" \
-            --single-select-option-id "$VIEW_WORKING_BOARD"
-
-      - name: Engineering Initiatives to View
+      - name: Set View for Items Labeled engineering-initiative
         if: github.event.label.name == 'engineering-initiative'
-        env:
-          GH_TOKEN: ${{ steps.token.outputs.token }}
-        run: |
-          PROJECT_ITEM_ID=$(gh project item-add $PROJECT_NUMBER --owner "hashicorp" --url "$ISSUE_URL" --format json --jq '.id')
-
-          gh project item-edit \
-            --id "$PROJECT_ITEM_ID" \
-            --project-id "$PROJECT_ID" \
-            --field-id "$VIEW_FIELD_ID" \
-            --single-select-option-id "$VIEW_ENGINEERING_INITIATIVE"
+        uses: ./.github/actions/community_check
+        with:
+          github_token: ${{ steps.token.outputs.token }}
+          item_url: ${{ env.ISSUE_URL }}
+          view: "engineering-initiative"
