--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 *             @hashicorp/terraform-aws
-/.github/     @breathingdust @justinretzolk
+/.github/     @breathingdust @justinretzolk @hashicorp/terraform-aws
