--- a/internal/service/cloudformation/schemas/AWS_NetworkFirewall_TLSInspectionConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_NetworkFirewall_TLSInspectionConfiguration.json
@@ -232,7 +232,16 @@
     }
   },
   "tagging": {
-    "taggable": true
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": true,
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "network-firewall:TagResource",
+      "network-firewall:UntagResource",
+      "network-firewall:ListTagsForResource"
+    ]
   },
   "required": [
     "TLSInspectionConfigurationName",
