--- a/internal/service/cloudformation/schemas/AWS_VpcLattice_ServiceNetworkServiceAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_VpcLattice_ServiceNetworkServiceAssociation.json
@@ -184,7 +184,8 @@
     "delete": {
       "permissions": [
         "vpc-lattice:DeleteServiceNetworkServiceAssociation",
-        "vpc-lattice:GetServiceNetworkServiceAssociation"
+        "vpc-lattice:GetServiceNetworkServiceAssociation",
+        "vpc-lattice:UntagResource"
       ]
     },
     "list": {
@@ -215,6 +216,11 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": true,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "vpc-lattice:UntagResource",
+      "vpc-lattice:TagResource",
+      "vpc-lattice:ListTagsForResource"
+    ]
   }
 }
