--- a/.github/workflows/feed-approval.yml
+++ b/.github/workflows/feed-approval.yml
@@ -20,14 +20,14 @@ jobs:
           id: community_check
           uses: ./.github/actions/community_check
           with:
-            user_login: ${{ github.event.pull_request.user.login }}
+            user_login: ${{ github.event.review.user.login }}
             maintainers: ${{ secrets.MAINTAINERS }}
+            partners: ${{ secrets.PARTNERS }}
 
         - name: Maintainer Approval
           if: |
             github.event.review.state == 'approved'
-            && steps.community_check.outputs.maintainer == 'true'
-            && github.actor != 'dependabot[bot]'
+            && (steps.community_check.outputs.maintainer == 'true' || steps.community_check.outputs.partner == 'true')
           uses: slackapi/slack-github-action@37ebaef184d7626c5f204ab8d3baff4262dd30f0 # v1.27.0
           env:
             REVIEW_AUTHOR_URL: ${{ github.event.review.user.html_url }}
