09/18/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_ApplicationInsights_Application.json
+++ b/internal/service/cloudformation/schemas/AWS_ApplicationInsights_Application.json
@@ -699,31 +699,107 @@
   "handlers": {
     "create": {
       "permissions": [
-        "*"
+        "applicationinsights:CreateApplication",
+        "applicationinsights:DescribeApplication",
+        "applicationinsights:CreateComponent",
+        "applicationinsights:DescribeComponent",
+        "applicationinsights:CreateLogPattern",
+        "applicationinsights:DescribeLogPattern",
+        "applicationinsights:DescribeComponentConfigurationRecommendation",
+        "applicationinsights:UpdateComponentConfiguration",
+        "applicationinsights:ListComponents",
+        "applicationinsights:TagResource",
+        "ec2:DescribeInstances",
+        "ec2:DescribeVolumes",
+        "rds:DescribeDBInstances",
+        "rds:DescribeDBClusters",
+        "sqs:ListQueues",
+        "elasticloadbalancing:DescribeLoadBalancers",
+        "elasticloadbalancing:DescribeTargetGroups",
+        "elasticloadbalancing:DescribeTargetHealth",
+        "autoscaling:DescribeAutoScalingGroups",
+        "lambda:ListFunctions",
+        "dynamodb:ListTables",
+        "s3:ListAllMyBuckets",
+        "sns:ListTopics",
+        "states:ListStateMachines",
+        "apigateway:GET",
+        "ecs:ListClusters",
+        "ecs:DescribeTaskDefinition",
+        "ecs:ListServices",
+        "ecs:ListTasks",
+        "eks:ListClusters",
+        "eks:ListNodegroups",
+        "fsx:DescribeFileSystems",
+        "logs:DescribeLogGroups",
+        "elasticfilesystem:DescribeFileSystems"
       ],
       "timeoutInMinutes": 600
     },
     "read": {
       "permissions": [
-        "*"
+        "applicationinsights:DescribeApplication",
+        "applicationinsights:ListTagsForResource",
+        "applicationinsights:DescribeComponent",
+        "applicationinsights:ListComponents",
+        "applicationinsights:DescribeLogPattern",
+        "applicationinsights:ListLogPatterns",
+        "applicationinsights:ListLogPatternSets"
       ]
     },
     "update": {
       "permissions": [
-        "*"
+        "applicationinsights:CreateApplication",
+        "applicationinsights:DescribeApplication",
+        "applicationinsights:UpdateApplication",
+        "applicationinsights:TagResource",
+        "applicationinsights:UntagResource",
+        "applicationinsights:ListTagsForResource",
+        "applicationinsights:CreateComponent",
+        "applicationinsights:DescribeComponent",
+        "applicationinsights:DeleteComponent",
+        "applicationinsights:ListComponents",
+        "applicationinsights:CreateLogPattern",
+        "applicationinsights:DeleteLogPattern",
+        "applicationinsights:DescribeLogPattern",
+        "applicationinsights:ListLogPatterns",
+        "applicationinsights:ListLogPatternSets",
+        "applicationinsights:UpdateLogPattern",
+        "applicationinsights:DescribeComponentConfiguration",
+        "applicationinsights:DescribeComponentConfigurationRecommendation",
+        "applicationinsights:UpdateComponentConfiguration"
       ],
       "timeoutInMinutes": 600
     },
     "delete": {
       "permissions": [
-        "*"
+        "applicationinsights:DeleteApplication",
+        "applicationinsights:DescribeApplication"
       ]
     },
     "list": {
       "permissions": [
-        "*"
+        "applicationinsights:ListApplications",
+        "applicationinsights:DescribeApplication",
+        "applicationinsights:ListTagsForResource",
+        "applicationinsights:DescribeComponent",
+        "applicationinsights:ListComponents",
+        "applicationinsights:DescribeLogPattern",
+        "applicationinsights:ListLogPatterns",
+        "applicationinsights:ListLogPatternSets"
       ]
     }
   },
-  "taggable": true
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "applicationinsights:ListTagsForResource",
+      "applicationinsights:TagResource",
+      "applicationinsights:UntagResource"
+    ]
+  }
 }
