--- a/internal/service/cloudformation/schemas/AWS_Config_AggregationAuthorization.json
+++ b/internal/service/cloudformation/schemas/AWS_Config_AggregationAuthorization.json
@@ -70,7 +70,12 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": false,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "config:TagResource",
+      "config:UntagResource",
+      "config:ListTagsForResource"
+    ]
   },
   "primaryIdentifier": [
     "/properties/AuthorizedAccountId",
