--- a/internal/service/cloudformation/schemas/AWS_Config_ConfigurationAggregator.json
+++ b/internal/service/cloudformation/schemas/AWS_Config_ConfigurationAggregator.json
@@ -116,7 +116,12 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": false,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "config:TagResource",
+      "config:UntagResource",
+      "config:ListTagsForResource"
+    ]
   },
   "createOnlyProperties": [
     "/properties/ConfigurationAggregatorName"
