update goreleaser deprecations

--- a/.github/goreleaser-cross-compiler-test.yml
+++ b/.github/goreleaser-cross-compiler-test.yml
@@ -1,6 +1,7 @@
 # Copyright (c) HashiCorp, Inc.
 # SPDX-License-Identifier: MPL-2.0
 
+version: 2
 archives:
   - files:
       # Ensure only built binary is archived
@@ -27,4 +28,4 @@ builds:
       - -s -w -X version.ProviderVersion={{.Version}}
     mod_timestamp: '{{ .CommitTimestamp }}'
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  version_template: "{{ .Tag }}-next"
