09/25/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_Route53Profiles_ProfileAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_Route53Profiles_ProfileAssociation.json
@@ -30,7 +30,7 @@
     },
     "Arn": {
       "type": "string",
-      "description": "The Amazon Resource Name (ARN) of the  profile association."
+      "description": "The Amazon Resource Name (ARN) of the profile association."
     }
   },
   "definitions": {
@@ -66,8 +66,7 @@
     "/properties/Id"
   ],
   "writeOnlyProperties": [
-    "/properties/Arn",
-    "/properties/Tags"
+    "/properties/Arn"
   ],
   "createOnlyProperties": [
     "/properties/Name",
@@ -82,7 +81,11 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": false,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "route53profiles:TagResource",
+      "route53profiles:UntagResource"
+    ]
   },
   "handlers": {
     "create": {
@@ -90,7 +93,8 @@
         "route53profiles:AssociateProfile",
         "route53profiles:GetProfileAssociation",
         "ec2:DescribeVpcs",
-        "route53profiles:TagResource"
+        "route53profiles:TagResource",
+        "route53profiles:ListTagsForResource"
       ]
     },
     "update": {
@@ -111,7 +115,8 @@
       "permissions": [
         "route53profiles:DisassociateProfile",
         "route53profiles:GetProfileAssociation",
-        "route53profiles:UntagResource"
+        "route53profiles:UntagResource",
+        "route53profiles:ListTagsForResource"
       ]
     },
     "list": {
