--- a/internal/service/cloudformation/schemas/AWS_Wisdom_KnowledgeBase.json
+++ b/internal/service/cloudformation/schemas/AWS_Wisdom_KnowledgeBase.json
@@ -32,7 +32,8 @@
       "type": "string",
       "enum": [
         "EXTERNAL",
-        "CUSTOM"
+        "CUSTOM",
+        "MESSAGE_TEMPLATES"
       ]
     },
     "RenderingConfiguration": {
