10/24/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_IVS_EncoderConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IVS_EncoderConfiguration.json
@@ -55,16 +55,16 @@
           "default": 30
         },
         "Height": {
-          "description": "Video-resolution height. Note that the maximum value is determined by width times height, such that the maximum total pixels is 2073600 (1920x1080 or 1080x1920). Default: 720.",
+          "description": "Video-resolution height. This must be an even number. Note that the maximum value is determined by width times height, such that the maximum total pixels is 2073600 (1920x1080 or 1080x1920). Default: 720.",
           "type": "integer",
-          "minimum": 1,
+          "minimum": 2,
           "maximum": 1920,
           "default": 720
         },
         "Width": {
-          "description": "Video-resolution width. Note that the maximum value is determined by width times height, such that the maximum total pixels is 2073600 (1920x1080 or 1080x1920). Default: 1280.",
+          "description": "Video-resolution width. This must be an even number. Note that the maximum value is determined by width times height, such that the maximum total pixels is 2073600 (1920x1080 or 1080x1920). Default: 1280.",
           "type": "integer",
-          "minimum": 1,
+          "minimum": 2,
           "maximum": 1920,
           "default": 1280
         }
