--- a/internal/service/cloudformation/schemas/AWS_InspectorV2_CisScanConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_InspectorV2_CisScanConfiguration.json
@@ -120,7 +120,7 @@
           "maxItems": 10000,
           "items": {
             "type": "string",
-            "pattern": "^\\d{12}|ALL_MEMBERS|SELF$"
+            "pattern": "^\\d{12}|ALL_ACCOUNTS|SELF$"
           },
           "uniqueItems": true
         },
