--- a/internal/service/cloudformation/schemas/AWS_Route53Profiles_ProfileResourceAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_Route53Profiles_ProfileResourceAssociation.json
@@ -43,6 +43,7 @@
     "/properties/Name",
     "/properties/ResourceArn"
   ],
+  "replacementStrategy": "delete_then_create",
   "primaryIdentifier": [
     "/properties/Id"
   ],
